# PGA-Tests

./: README.md
source_code/: CMakeLists.txt  face.ppm
source_code/src/: brick.ppm  config.h  goldy.ppm  helper.cc  helper.h  multivector.h  pga.h  pga_example.cpp  primitives.h  squareStarter.cpp
